<resources>
    <string name="app_name">ITG</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Registration</string>
    <string name="home">Home</string>
    <string name="course">Courses</string>
    <string name="contact">Contact</string>
    <string name="video">Videos</string>
</resources>
