<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home"
        />
    <item
        android:id="@+id/navigation_course"
        android:icon="@drawable/couse"
        android:title="@string/course"
        />
    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/call_icon"
        android:title="@string/contact"
        />
    <item
        android:id="@+id/navigation_registration"
        android:icon="@drawable/registeration_icon"
        android:title="@string/registration"
        />
    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/videotrans"
        android:title="@string/video"
        />

</menu>
